--- a/app/views/layouts/partials/_advertising_product.html.erb
+++ b/app/views/layouts/partials/_advertising_product.html.erb
@@ -1,6 +1,9 @@
 <!-- Start Advertising Product -->
 <div class="col-12 col-md-4 mb-4">
-    <div class="card h-100">
+    <div class="card h-100">       
+        <% if product.product_discount > 0 %>
+            <div class="ribbon ribbon-top-right"><span>Sale <%= number_to_percentage(product.product_discount, precision: 0) %></span></div>
+        <% end %>
         <%= link_to image_tag( product.product_images.find_by(is_default: true).image_url, class: 'card-img-top', alt: product.product_name),  '/products/'+product.meta_title %>
         <div class="card-body">
             <ul class="list-unstyled d-flex justify-content-between">
@@ -16,9 +19,9 @@
                     <% end %>
                 </li>
                 <li class="text-muted text-right">
-                    <%= number_to_currency(product.sell_price * (1 - product.product_discount / 100), precision: 2) %>           
+                    <%= number_to_currency(product.sell_price * (1 - product.product_discount / 100), precision: 0, unit: 'VND', format: '%n %u') %>           
                     <% unless product.product_discount == 0 %>
-                        &nbsp;&nbsp;&nbsp;<s><%= number_to_currency(product.sell_price, precision: 2) %></s>
+                        &nbsp;&nbsp;&nbsp;<s><%= number_to_currency(product.sell_price, precision: 0, unit: 'VND', format: '%n %u') %></s>
                     <% end %>           
                 </li>
             </ul>
