--- a/app/views/layouts/partials/_update_cart.html.erb
+++ b/app/views/layouts/partials/_update_cart.html.erb
@@ -25,9 +25,9 @@
                             <td class="tr-text-center"><%= link_to item.inventory.product.product_name, "/products/#{item.inventory.product.meta_title}", class: 'text-decoration-none text-success' %></td>
                             <td class="tr-text-center"><%= item.inventory.size %></td>
                             <td><%= image_tag item.inventory.color_url, class: 'item-img' %></td>
-                            <td class="tr-text-center"><%= number_to_currency(item.inventory.product.sell_price * (1 - item.inventory.product.product_discount/100), precision: 2) %></td>
+                            <td class="tr-text-center"><%= number_to_currency(item.inventory.product.sell_price * (1 - item.inventory.product.product_discount/100), precision: 0, unit: 'VND', format: '%n %u') %></td>
                             <td class="tr-text-center"><input id="cart-quantity-<%= item.inventory_id %>" onchange="update_quantity('<%= item.inventory_id %>')" class="w-60-px border-0" type="number"  min="1" max="<%= inventories.find(item.inventory_id).quantity_of_inventory %>" value="<%= item.quantity %>"></td>
-                            <td id="item-total-<%= item.inventory_id %>" class="tr-text-center"><%= number_to_currency(item.inventory.product.sell_price * (1 - item.inventory.product.product_discount/100) * item.quantity, precision: 2) %></td>
+                            <td id="item-total-<%= item.inventory_id %>" class="tr-text-center"><%= number_to_currency(item.inventory.product.sell_price * (1 - item.inventory.product.product_discount/100) * item.quantity, precision: 0, unit: 'VND', format: '%n %u') %></td>
                             <td><a class="btn btn-danger" onclick="remove_from_cart('<%= item.inventory.product_id %>', '<%= item.inventory.size %>', '<%= item.inventory.color_url %>')"><i class="fa fa-faw fa-trash-alt"></i></a></td>
                         </tr> 
                     <% end %>        
@@ -36,7 +36,7 @@
                     <tr class="tr-border-transparent">
                         <td colspan="5"></td>
                         <td>Total:</td>
-                        <td id="checkout-cart-total"><%= number_to_currency(session[:total_cart], precision: 2) %></td>
+                        <td id="checkout-cart-total"><%= number_to_currency(session[:total_cart], precision: 0, unit: 'VND', format: '%n %u') %></td>
                     </tr>
                 </tfoot>
             </table>
