--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -93,14 +93,26 @@ Custom Css
     bottom: 0;
   }
 }
+.mr-0 {
+  margin-right: 0!important;
+}
 .font-size-1-rem {
   font-size: 1rem!important;
+}
+.font-size-1-5-rem {
+  font-size: 1.5rem!important;
+}
+.font-size-2-5-rem {
+  font-size: 2.5rem!important;
 }
 .font-weight-300 {
   font-weight: 300!important;
 }
 .font-weight-400 {
   font-weight: 400!important;
+}
+.font-weight-600 {
+  font-weight: 600!important;
 }
 .margin-bottom-0-rem {
   margin-bottom: 0rem!important;;
@@ -204,4 +216,127 @@ Custom Css
 .star-half-decoration {
   position: absolute !important;
   top: 4px!important;
+}
+.ribbon {
+  z-index: 1;
+  width: 150px;
+  height: 150px;
+  overflow: hidden;
+  position: absolute;
+}
+.ribbon::before,
+.ribbon::after {
+  position: absolute;
+  z-index: -1;
+  content: '';
+  display: block;
+  border: 5px solid #56ae6c;
+}
+.ribbon span {
+  position: absolute;
+  display: block;
+  width: 225px;
+  padding: 15px 0;
+  background-color: #56ae6c;
+  box-shadow: 0 5px 10px rgba(0,0,0,.1);
+  color: #fff;
+  font: 700 18px/1 'Lato', sans-serif;
+  text-shadow: 0 1px 1px rgba(0,0,0,.2);
+  text-transform: uppercase;
+  text-align: center;
+}
+.ribbon-top-right {
+  top: -10px;
+  right: -10px;
+}
+.ribbon-top-right::before,
+.ribbon-top-right::after {
+  border-top-color: transparent;
+  border-right-color: transparent;
+}
+.ribbon-top-right::before {
+  top: 0;
+  left: 0;
+}
+.ribbon-top-right::after {
+  bottom: 0;
+  right: 0;
+}
+.ribbon-top-right span {
+  left: -25px;
+  top: 30px;
+  transform: rotate(45deg);
+}
+
+.ribbon-top-left {
+  top: -10px;
+  left: -10px;
+}
+.ribbon-top-left::before,
+.ribbon-top-left::after {
+  border-top-color: transparent;
+  border-left-color: transparent;
+}
+.ribbon-top-left::before {
+  top: 0;
+  right: 0;
+}
+.ribbon-top-left::after {
+  bottom: 0;
+  left: 0;
+}
+.ribbon-top-left span {
+  right: -25px;
+  top: 30px;
+  transform: rotate(-45deg);
+}
+
+.vertical {
+  border-right: 5px dotted #56ae6c;
+}
+.coupon-decoration-top {
+  height: 20px;
+  width: 20px;
+  position: absolute;
+  background-color: #e9eef5;
+  top: -5px;
+  left: 197px;
+  border-bottom-right-radius: 50%;
+  border-bottom-left-radius: 50%;
+}
+.coupon-decoration-bottom {
+  height: 20px;
+  width: 20px;
+  position: absolute;
+  background-color: #e9eef5;
+  bottom: -5px;
+  left: 197px;
+  border-top-right-radius: 50%;
+  border-top-left-radius: 50%;
+}
+
+.copy-button {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.copy-button {
+  margin: 12px 0 -5px 0;
+  height: 45px;
+  border-radius: 4px;
+  padding: 0 5px;
+  border: 1px solid #e1e1e1;
+}
+
+.copy-button input {
+  width: 100%;
+  height: 100%;
+  border: none;
+  outline: none;
+  font-size: 15px;
+}
+
+.copy-button a {
+  padding: 5px 20px;
+  border: 1px solid transparent;
 }
