--- a/app/views/coupons/index.html.erb
+++ b/app/views/coupons/index.html.erb
@@ -1,23 +1,18 @@
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  Launch demo modal
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
+<!-- Open Content -->
+<section class="bg-light">
+    <div class="container py-5">
+        <div class="row">
+            <div class="col-md-6 m-auto text-center">
+                <h1 class="h1">Coupons</h1>
+                <p>
+                    There are many coupons waiting for you to use. Get it now !!!
+                </p>
+            </div>
+        </div>
+        <div class="row my-3">
+          <%= render partial: 'layouts/partials/coupon', collection: @coupons, as: :coupon %>
+        </div>
     </div>
-  </div>
-</div>
+</section>
+
+<%= javascript_include_tag 'ajax_coupon', 'data-turbolinks-track': 'load' %>
