--- a/app/views/layouts/partials/_advertising_product.html.erb
+++ b/app/views/layouts/partials/_advertising_product.html.erb
@@ -18,10 +18,10 @@
                         <i class="text-muted fa fa-star"></i>   
                     <% end %>
                 </li>
-                <li class="text-muted text-right">
+                <li class="text-right">
                     <%= number_to_currency(product.sell_price * (1 - product.product_discount / 100), precision: 0, unit: 'VND', format: '%n %u') %>           
                     <% unless product.product_discount == 0 %>
-                        &nbsp;&nbsp;&nbsp;<s><%= number_to_currency(product.sell_price, precision: 0, unit: 'VND', format: '%n %u') %></s>
+                        &nbsp;&nbsp;&nbsp;<s class="text-muted"><%= number_to_currency(product.sell_price, precision: 0, unit: 'VND', format: '%n %u') %></s>
                     <% end %>           
                 </li>
             </ul>
