--- a/app/views/layouts/partials/_product.html.erb
+++ b/app/views/layouts/partials/_product.html.erb
@@ -45,7 +45,7 @@
             <p class="text-center mb-0">
                 <%= number_to_currency(product.sell_price * (1 - product.product_discount / 100), precision: 0, unit: 'VND', format: '%n %u') %>            
                 <% unless product.product_discount == 0 %>
-                    &nbsp;&nbsp;&nbsp;<s><%= number_to_currency(product.sell_price, precision: 0, unit: 'VND', format: '%n %u') %></s>
+                    &nbsp;&nbsp;&nbsp;<s class="text-muted"><%= number_to_currency(product.sell_price, precision: 0, unit: 'VND', format: '%n %u') %></s>
                 <% end %> 
             </p>
         </div>
