verify recaptcha done

--- a/app/views/layouts/partials/_confirm_order_information.html.erb
+++ b/app/views/layouts/partials/_confirm_order_information.html.erb
@@ -64,6 +64,9 @@
                 <% end %>
             </select>
         </div>
+        <div>
+            <%= recaptcha_tags %>
+        </div>
         <div class="text-end col-md-12">
             <a onclick="back_to_cart()" class="btn btn-secondary text-white"><i class="fa fa-faw fa-arrow-left"></i> Back to my cart</a>
             <a onclick="pay()" class="btn btn-success text-white font-size-18-px font-weight-300" >Checkout</a>     
