--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -99,4 +99,4 @@
     </div>
 </section>
 
-<%= javascript_include_tag 'ajax_user', 'data-turbolinks-track': 'load' %>
+<%= javascript_include_tag 'ajax_users', 'data-turbolinks-track': 'load' %>
