--- a/app/views/checkout/result.html.erb
+++ b/app/views/checkout/result.html.erb
@@ -3,7 +3,8 @@
         <% if @pay_code == "00" %>
             <h2 class="h1 text-success text-center"><i class="fa fa-fw fa-thumbs-up"></i> Payment success!</h2>
             <p class="text-dark text-center">
-                Order id: <%= @order.id %></br>
+                <label>Order id: <%= @order.id %></label></br>
+                <label>Your order is awaiting approval from our shop. We will send the product to you as soon as possible.</label></br>              
                 <a href="/checkout" class="btn btn-success my-5 mb-0">View this order</a>
             </p>
             <section class="py-5">
