--- a/app/views/coupons/index.html.erb
+++ b/app/views/coupons/index.html.erb
@@ -15,4 +15,4 @@
     </div>
 </section>
 
-<%= javascript_include_tag 'ajax_coupon', 'data-turbolinks-track': 'load' %>
+<%= javascript_include_tag 'ajax_coupons', 'data-turbolinks-track': 'load' %>
