--- a/app/views/layouts/partials/_update_cart.html.erb
+++ b/app/views/layouts/partials/_update_cart.html.erb
@@ -21,7 +21,7 @@
                 <tbody class="table-border">                
                     <% carts.each_with_index do |item, index| %>
                         <tr id="checkout-item-<%= item.inventory_id %>">
-                            <td class="tr-text-center" scope="row"><%= index + 1 %></td>
+                            <td class="tr-text-center" scope="row"></td>
                             <td class="tr-text-center"><%= link_to item.inventory.product.product_name, "/products/#{item.inventory.product.meta_title}", class: 'text-decoration-none text-success' %></td>
                             <td class="tr-text-center"><%= item.inventory.size %></td>
                             <td><%= image_tag item.inventory.color_url, class: 'item-img' %></td>
