web client done

--- a/app/views/checkout/result.html.erb
+++ b/app/views/checkout/result.html.erb
@@ -5,7 +5,7 @@
             <p class="text-dark text-center">
                 <label>Order id: <%= @order.id %></label></br>
                 <label>Your order is awaiting approval from our shop. We will send the product to you as soon as possible.</label></br>              
-                <a href="/checkout" class="btn btn-success my-5 mb-0">View this order</a>
+                <a href="/users/orders-history" class="btn btn-success my-5 mb-0">View this order</a>
             </p>
             <section class="py-5">
                 <div class="container">
