--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -15,3 +15,26 @@
 // For example, to change the default status-tag color:
 //
 //   .status_tag { background: #6090DB; }
+body {
+    font-size: 90%;
+}
+select {
+    padding: 8px 35px 7px 15px !important;
+    vertical-align: middle;
+    background-color: #fff;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    background-position: right 0.75rem center;
+    background-size: 16px 12px;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    &:focus{
+        outline: none;
+    }
+}
+form.filter_form .filter_form_field.select_and_search select{
+    width: 120px;
+}
