--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -38,3 +38,6 @@ select {
 form.filter_form .filter_form_field.select_and_search select{
     width: 120px;
 }
+.border-img {
+    border: 2px solid #ccc;
+}
