--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -93,8 +93,8 @@
                             <span id="rate" class="list-inline-item text-dark mx-0">Rating <%= number_with_precision(@product.score_rating, precision: 1) %> (<%= @product.number_of_rates %> rates) | <%= @product.comments.count %> Comments</span>
                             
                             <% if user_signed_in? %>
-                                | Your rating   
-                                <% user_review = @reviews.find_by(user_id: current_user.id, product_id: @product.id) %>  
+                                | Your rating                                 
+                                <% user_review = @reviews.nil? ? nil : @reviews.find_by(user_id: current_user.id, product_id: @product.id) %>  
                                 <% user_score_rating = user_review.nil? ? 0 : user_review.user_score_rating.to_i%>  
                                 <input type="hidden" id="star-rate" value="<%= user_score_rating < 1 ? 0 : user_score_rating - 1 %>">                        
                                 <label onmouseout="out_animation_rating()">                                                                     
