admin order coding

--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -41,3 +41,12 @@ form.filter_form .filter_form_field.select_and_search select{
 .border-img {
     border: 2px solid #ccc;
 }
+.bg-warning {
+    background-color: #ffc107!important;
+}
+.bg-success {
+    background-color: #59ab6e!important;
+}
+.bg-primary {
+    background-color: #0d6efd!important;
+}
