--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: 'layouts/partials/banners' %>
+<%= render partial: 'layouts/partials/banners', locals: { banners: @banners } %>
 <%= render partial: 'layouts/partials/categories' %>
 <!-- Start Featured Product -->
 <section class="bg-light">
