--- a/app/views/layouts/partials/_order_details.html.erb
+++ b/app/views/layouts/partials/_order_details.html.erb
@@ -22,9 +22,9 @@
                     <td class="tr-text-center"><%= link_to item.inventory.product.product_name, "/products/#{item.inventory.product.meta_title}", class: 'text-decoration-none text-success' %></td>
                     <td class="tr-text-center"><%= item.inventory.size %></td>
                     <td><%= image_tag item.inventory.color_url, class: 'item-img' %></td>
-                    <td class="tr-text-center"><%= number_to_currency(item.inventory.product.sell_price * (1 - item.inventory.product.product_discount/100), precision: 0, unit: 'VND', format: '%n %u') %></td>
+                    <td class="tr-text-center"><%= number_to_currency(item.sell_price * (1 - item.product_discount/100), precision: 0, unit: 'VND', format: '%n %u') %></td>
                     <td class="tr-text-center"><%= item.quantity_of_order %></td>
-                    <td id="item-total-<%= item.inventory_id %>" class="tr-text-center"><%= number_to_currency(item.inventory.product.sell_price * (1 - item.inventory.product.product_discount/100) * item.quantity_of_order, precision: 0, unit: 'VND', format: '%n %u') %></td>
+                    <td id="item-total-<%= item.inventory_id %>" class="tr-text-center"><%= number_to_currency(item.sell_price * (1 - item.product_discount/100) * item.quantity_of_order, precision: 0, unit: 'VND', format: '%n %u') %></td>
                 </tr> 
             <% end %>        
         </tbody>
