admin dashboard coding

--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -57,3 +57,12 @@ form.filter_form .filter_form_field.select_and_search select{
     margin-right: 4rem;
     text-align: right;
 }
+.quantity-items-summary {
+    font-size: 2em;
+}
+.summary {
+    
+}
+.mb-0 {
+    margin-bottom: 0;
+}
